<resources>
    <string name="app_name">Graph Library</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_line_graph">LineGraph</string>
    <string name="free_curve">Free Curve</string>
    <string name="line_graph">Line Graph</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="bar_graph">Bar Graph</string>
    <string name="create_new_graph">Create New Graph</string>
    <string name="recents">Recents</string>
    <string name="graph_title">Graph Title</string>
    <string name="points">Points</string>
    <string name="add_point">Add Point</string>
    <string name="entry">Entry</string>
    <string name="x">X :</string>
    <string name="y">Y :</string>
    <string name="add">Add</string>
    <string name="no_pts">No Points To Show</string>
    <string name="line_graph_title">Line Graph</string>
    <string name="get_y_val">Get Y value</string>
    <string name="name">Name</string>
    <string name="data">Data</string>
    <string name="no_recent">No recent charts to show</string>
    <string name="create_new">Create New Chart</string>
    <string name="chart_title">Chart Title</string>
    <string name="add_entry">Add Entry</string>
    <string name="category">Name</string>
    <string name="percentage">Data</string>
    <string name="color">Color</string>
    <string name="options">&#8942;</string>
    <string name="entries">Entries</string>
    <string name="no_entries">No Entries to Show</string>
    <string name="edit_graph_label">Edit Graph</string>
    <string name="resetGraph">Reset</string>
</resources>
