<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.suyash.graph.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >



            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/crossLineGraph"
                android:src="@drawable/ic_close_white_24dp"
                android:backgroundTint="#00000011"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_new_graph"
                android:textSize="18sp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:textColor="@color/colorAccent" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:id="@+id/okLineGraph"
                android:src="@drawable/ic_done_white_24dp"
                android:backgroundTint="#00000011"/>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_title"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        />
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lineGraphTitleEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:textCursorDrawable="@null"
        android:nextFocusUp="@id/lineGraphTitleEditText"
        android:nextFocusLeft="@id/lineGraphTitleEditText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp">

        <View
            android:layout_width="12dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#C4C4C4"
            android:layout_marginEnd="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="14sp"
            android:textColor="#707070"/>
        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#C4C4C4"
            android:layout_marginStart="2dp"/>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pts"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:visibility="visible"
            android:id="@+id/no_pts_tag"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:id="@+id/lineGraphPtsList"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_point"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:id="@+id/addLinePoint"
        />


</LinearLayout>
