<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.suyash.graph.PieChartNew">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/pieChartNewClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="#00000011"
                android:src="@drawable/ic_close_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/create_new"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/pieChartNewDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_done_white_24dp" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/chart_title"
            android:textColor="#707070"
            android:textSize="14sp" />



        <LinearLayout
            android:id="@+id/blank"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>


        <EditText
            android:id="@+id/pieChartTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded"
            android:padding="5sp"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            android:focusedByDefault="false"
            android:nextFocusForward="@id/blank"
            android:nextFocusUp="@id/pieChartTitleEditText"
            android:nextFocusLeft="@id/pieChartTitleEditText"
            android:inputType="textPersonName"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">


            <View
                android:layout_width="12dp"
                android:layout_height="1dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="10dp"
                android:background="#C4C4C4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entries"
                android:textColor="#707070"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:background="#C4C4C4" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="100dp"
            android:text="@string/no_entries"
            android:textColor="#707070"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/pieChartAddEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:paddingBottom="14dp"
        android:text="@string/add_entry"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />


</LinearLayout>
