<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.suyash.graph.BarGraphNew">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <ImageButton
                android:id="@+id/crossBarGraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:backgroundTint="#00000011"
                android:src="@drawable/ic_close_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/create_new_graph"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/okLineGraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#00000011"
                android:src="@drawable/ic_done_white_24dp" />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/graph_title" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/lineGraphTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded"
            android:nextFocusLeft="@id/lineGraphTitleEditText"
            android:nextFocusUp="@id/lineGraphTitleEditText"
            android:padding="5dp"
            android:textCursorDrawable="@null"
            android:textSize="25sp"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <View
                android:layout_width="12dp"
                android:layout_height="1dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="10dp"
                android:background="#C4C4C4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entries"
                android:textColor="#707070"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:background="#C4C4C4" />
        </LinearLayout>

        <TextView
            android:id="@+id/no_pts_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/no_entries"
            android:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/barGraphPtsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <Button
        android:id="@+id/addBarPointEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/add_point"
        android:textColor="@color/colorAccent" />


</LinearLayout>
