<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.suyash.graph.BarGraphLanding">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/barGraphBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000011"
                android:src="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="125dp"
                android:layout_marginRight="125dp"
                android:layout_marginTop="14dp"
                android:text="@string/bar_graph"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <Button
        android:id="@+id/createNewBarGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/create_new_graph"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <View
            android:layout_width="12dp"
            android:layout_height="1dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="10dp"
            android:background="#C4C4C4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recents"
            android:textColor="#707070"
            android:textSize="14sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:background="#C4C4C4" />
    </LinearLayout>

</LinearLayout>
